2009-05-15: 
    Fixed feature request #4 If the show parameter should be toggeled
    or if just the selected should be shown.
    Fixed a small unoticed bug in the save over question for save as
    showed only the current filename and not the file that would be written
    over.
    Fixed feature request #9. The SLD profile can now be exported.
    Fixed bug #3. The set_extra_data function will raise an KeyError
    if the name of the extra data x,y or e.
    
2009-05-12:
    Made some final changes to the fom_duncs.py builtin documentation.
    Created a config variable called "save all evals" so that saving all
    evals into a file is supressed. Helps with filesizes.
    Has also implemented this in the Optimizer Settings dilaog box togheter
    with the buffer size for logging. Feature request ID: 2787480.
2009-05-10:
    Fixed problem with icons in the refelctivity plugin (compability issues)
    Made changes in event_handlers to cope with odler version installed
    on my kubuntu machine.
    Fixed bug ID: 2737390, the pars plot now updates when a model is loaded.
    Fixed bug ID: 2748261 in interdiff.py. Should still refactor them but not
    now.
    Fixed bug ID: ID: 2737406. Errorbars are completely removed when a
    new fit is started.
    Added so that diffev works with the standardlibrary package multiprocessing
    as well as the odler processing. Parallel should work out of
    the box for Python > 2.6

2009-03-30:
    Fixed long standing issue with the speed display in when using
    parallel processing.
    Added help on the FOM functions.

2009-03-29:
    Fixed yet another bug in plotpanel relating to the new version of
    matplotlib.
    Fixed a bug in the search replace:
    no scrolling when searching the scriptbug, ID: 2720666
    Fixed bug in the refelctivity plugin:
    Bug in adding a layer with substrate marked, ID: 2633020 
    Fixed bug in the refelctivity plugin:
    ID: 2720662, Plugin does not check if the names are valid